--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 :root {
-  --primaryColor: #f15025;
+  --primaryColor: #f80b0b;
   --mainWhite: #fff;
   --mainBlack: #222;
   --mainGrey: #9e9e9e;
